--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="/OA.avif" />
+    <meta name="theme-color" content="#1a1a1a" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PipesHub: The Open Source Alternative To Glean</title>
+    <title>OpenAnalyst - Enterprise Search Platform</title>
   </head>
 
   <body>
